# estate-pdf-organizer

./: .coveralls.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/estate_pdf_organizer/: __init__.py  classifier.py  cli.py  organizer.py  pdf_processor.py  processor.py
tests/: test_classifier.py  test_organizer.py  test_pdf_processor.py  test_processor.py
