[project]
name = "estate-pdf-organizer"
version = "0.1.0"
description = "Organize estate documents using LLMs"
authors = [
    {name = "Jacob", email = "jacob.e.meacham@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "pypdf>=4.0.1",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "langchain>=0.1.9",
    "langchain-core>=0.1.18",
    "langchain-openai>=0.0.7",
    "openai>=1.12.0",
    "reportlab>=4.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "Pillow>=10.0.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "coveralls>=3.3.1",
]
lint = [
    "ruff>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "coveralls>=3.3.1",
    "ruff>=0.3.0",
]

[project.scripts]
estate-pdf-organizer = "estate_pdf_organizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "tests/*"
]

# Same as Black.
line-length = 100

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = []
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
unfixable = []

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-first-party = ["estate_pdf_organizer"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=estate_pdf_organizer --cov-report=term-missing" 